fix t/387: inline code doesn't wrap

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -376,6 +376,7 @@ code {
   display: inline-block;
   line-height: 1em;
   vertical-align: middle;
+  max-width: 100%; // force line break
 }
 
 table, tr, td, th {
